# spheresmooth-python

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  pyproject.toml  searchindex.js  sg_execution_times.html  test.py  test2.py  test3_apw.py
.doctrees/: environment.pickle  sg_execution_times.doctree
.doctrees/auto_examples/: apw.doctree  cartesian_to_spherical.doctree  cross.doctree  exp_map.doctree  geodesic_lower.doctree  goni.doctree  knots_quantile.doctree  normalize.doctree  normalize_lower.doctree  piecewise_geodesic.doctree  sg_execution_times.doctree  spherical_dist.doctree  spherical_to_cartesian.doctree
_downloads/a821c2298bdff34450b1eebf325dd829/: apw.py
_sources/auto_examples/: apw.rst.txt  exp_map.rst.txt  geodesic.rst.txt  goni.rst.txt  knots_quantile.rst.txt  piecewise_geodesic.rst.txt
auto_examples/: apw.html  cartesian_to_spherical.html  cartesian_to_spherical_02.html  cross.html  dot.html  exp_map.html  geodesic.html  geodesic_lower.html  goni.html  knots_quantile.html  norm2.html  normalize.html  normalize_lower.html  piecewise_geodesic.html  sg_execution_times.html  spherical_dist.html  spherical_to_cartesian.html
docs/: api.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/.doctrees/: environment.pickle  sg_execution_times.doctree
docs/.doctrees/auto_examples/: apw.doctree  geodesic.doctree  goni.doctree  knots_quantile.doctree  norm2.doctree  normalize_lower.doctree  piecewise_geodesic.doctree  sg_execution_times.doctree  spherical_dist.doctree
docs/.doctrees/gallery/: GALLERY_HEADER.doctree
docs/_build/html/: genindex.html  index.html  sg_execution_times.html
docs/_downloads/067e9f7f37f91e191cfeb079eb4561cb/: geodesic_lower.py
docs/_sources/: index.rst.txt  sg_execution_times.rst.txt
docs/_static/: documentation_options.js
docs/auto_examples/: apw.html  cartesian_to_spherical.html  cartesian_to_spherical_01.html  cross.html  dot.html  geodesic.html  goni.html  index.html  knots_quantile.html  norm2.html  normalize.html  piecewise_geodesic.html  sg_execution_times.html  spherical_to_cartesian.html
docs/gallery/: GALLERY_HEADER.html
docs/source/: api.rst  conf.py  sg_execution_times.rst
gallery/: GALLERY_HEADER.html
spheresmooth/: __init__.py  _internal.py  coords.py  data.py  datasets.py  geometry.py  loads.py  smoothing.py
spheresmooth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spheresmooth/data/: apw.csv  goni.csv
test/: test.py  test2.py  test3_apw.py  test4_goni.py  test5.py
(+99 files in other folders)
