[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spheresmooth"
version = "0.1.0"
description = "Geometry-aware spline smoothing and geodesic modeling for spherical data in Python"
license = "GPL-3.0-or-later"
authors = [
  {name = "Se-Young Lee", email = "sudang0404@gmail.com" },
  { name = "Kwan-Young Bak", email = "kybak@sungshin.ac.kr" }
]
maintainers = [
  { name = "Se-Young Lee", email = "sudang0404@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5"
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.7",
  "geopandas>=0.13"
]


[project.urls]
Homepage = "https://github.com/seyoung-230/spheresmooth-python"

[tool.setuptools.package-data]
spheresmooth = ["data/*.csv",
                "data/world/*.shp",
                "data/world/*.dbf",
                "data/world/*.shx",
                "data/world/*.prj",
                "data/world/*.cpg",]

[tool.setuptools.packages.find]
exclude = ["assets"]